--- a/assets/css/featured-product.css
+++ b/assets/css/featured-product.css
@@ -582,7 +582,7 @@ position: absolute;
  }
  
  .fp-box-a6::after {
-   content: "Chat with members in Private and Public modes.";
+   content: "Public Chat and Discussion with members of the meeting.";
    text-align: center;
    position: absolute;
    width: 170px;
@@ -867,7 +867,7 @@ position: absolute;
  }
  
  .fp-box-a11::after {
-   content: "Added Benifit - Company Branding.";
+   content: "Enterprise Auth and SSO.";
    text-align: center;
    position: absolute;
    width: 170px;
@@ -2166,7 +2166,62 @@ position: absolute;
 
 /* B22 ENDS */
 
+/* B23 START */
+/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
+.fp-box-b23{
+        position: absolute;
+        width: 180px;
+        height: 180px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+                -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                flex-direction: column;
+        border-radius: 3px;
+        overflow: hidden;
+        -webkit-transition: -webkit-box-shadow ease 1s;
+        transition: -webkit-box-shadow ease 1s;
+        transition: box-shadow ease 1s;
+        transition: box-shadow ease 1s, -webkit-box-shadow ease 1s;
+}
 
+.super-box:hover .fp-box-b23 {
+/*   border: 1px solid rgba(225, 227, 232, 0.18); */
+        -webkit-box-shadow: 0 3px 4px 0 rgba(44, 71, 146, 0.25);
+                box-shadow: 0 3px 4px 0 rgba(44, 71, 146, 0.25);
+        -webkit-transition-delay: 0.32s;
+                transition-delay: 0.32s;
+}
+
+.fp-box-b23::after {
+        content: "A Single SaaS Solution with Honeypot Entitlement per Organization.";
+        text-align: center;
+        position: absolute;
+        width: 170px;
+        top: 111px;
+        opacity: 0;
+        font-size: 11px;
+        color: #5d6494;
+        line-height: 20px;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        -webkit-transition-delay: 0.32s;
+        transition-delay: 0.32s;
+}
+
+.super-box:hover .fp-box-b23::after {
+        opacity: 1;
+}
+
+/* B23 ENDS */
 
 
 
